force-app/main/default/objects/Commission__c/Commission__c.object-meta.xml
<CustomObject>
    <description>Child object on opportunity for entering commissions by finance.</description>
    <label>Commission</label>
    <nameField>
        <displayFormat>COMMISSION-{00000000}</displayFormat>
        <label>Commission</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>