force-app/main/default/objects/Commission__c/fields/Chargeback_Commission_Date__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Commission_Date__c</fullName>
    <label>Chargeback Commission Date</label>
    <type>Date</type>
</CustomField>