force-app/main/default/objects/Commission__c/fields/Credit_Card_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Card Transaction</label>
    <referenceTo>bt_stripe__Transaction__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>