force-app/main/default/objects/Commission__c/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance</label>
    <referenceTo>Finance__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>