force-app/main/default/objects/Commission__c/fields/Offline_Payment__c.field-meta.xml
<CustomField>
    <fullName>Offline_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offline Payment</label>
    <referenceTo>Offline_Payment__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>