force-app/main/default/objects/Commission__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>UGA</fullName>
            </value>
            <value>
                <fullName>Ascnetium</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>