force-app/main/default/objects/Commission__c/recordTypes/Chargeback.recordType-meta.xml
<RecordType>
    <fullName>Chargeback</fullName>
    <active>true</active>
    <label>Chargeback</label>
</RecordType>